<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nearest"
                android:icon="@drawable/ic_navigation_white_36dp"
                android:title="@string/nearest_title" />
        <item
                android:id="@+id/finna"
                android:icon="@drawable/ic_navigation_white_36dp"
                android:title="@string/finna_title" />
        <item
            android:id="@+id/wikidocs_albums"
            android:icon="@drawable/ic_navigation_white_36dp"
            android:title="@string/wikidocs_albums_title" />

        <item
                android:id="@+id/albums"
                android:icon="@drawable/ic_photo_library_white_36dp"
                android:title="@string/albums_title" />
        <item
                android:id="@+id/favorites"
                android:icon="@drawable/ic_favorite_white_36dp"
                android:title="@string/favorites" />
        <item
                android:id="@+id/my_rephotos"
                android:icon="@drawable/ic_collections_bookmark_white_48dp"
                android:title="@string/my_rephotos" />
        <item
                android:id="@+id/rephoto_drafts"
                android:icon="@drawable/ic_photo_album_white_36dp"
                android:title="@string/rephoto_drafts" />
        <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_account_circle_white_36dp"
                android:title="@string/profile_title" />
        <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_title" />
        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/action_settings" />
    </group>
</menu>