<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/settings_show_tutorial"
                        android:defaultValue="true"
                        android:key="showTutorialPreference"
                        android:widgetLayout="@layout/checkbox_layout"
                        android:layout="@layout/preference_layout"/>
    <CheckBoxPreference android:title="@string/settings_show_map_by_default"
                        android:defaultValue="false"
                        android:key="showMapByDefaultPreference"
                        android:widgetLayout="@layout/checkbox_layout"
                        android:layout="@layout/preference_layout"/>
    <CheckBoxPreference android:title="@string/settings_agree_to_license_terms"
                        android:defaultValue="true"
                        android:key="agreeToLicenseTerms"
                        android:widgetLayout="@layout/checkbox_layout"
                        android:layout="@layout/preference_layout"/>
</PreferenceScreen>