<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- The ActionBar displayed at the top -->
        <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!-- The main content view where fragments are loaded -->
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
                     android:layout_width="match_parent" android:layout_height="match_parent"
                     tools:context="ee.ajapaik.android.AboutActivity" tools:ignore="MergeRootFrame">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutElementKey"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/version"
                        android:id="@+id/version"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutElementValue"
                        android:text="1.0"
                        android:id="@+id/version_value"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        style="@style/lineSeparator"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutElementKey"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contact"
                        android:id="@+id/contact"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutElementValue"
                        android:text="info@ajapaik.ee"
                        android:id="@+id/contact_value"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        style="@style/lineSeparator"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AboutElementKey"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/privacy_policy"
                        android:onClick="onClick"
                        android:clickable="true"
                        android:id="@+id/privacy_policy"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <!-- The navigation drawer that comes from the left -->
    <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
    <android.support.design.widget.NavigationView
            android:id="@+id/nvView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/white"
            app:menu="@menu/drawer_view"/>
</android.support.v4.widget.DrawerLayout>